--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,6 +5,7 @@
 <button routerLink="/home" routerLinkActive="active" mat-button>Home</button>
             <button routerLink="/register" mat-button>Register</button>
              <button routerLink="/login" mat-button>Login</button>
+              <button routerLink="/movies" mat-button>Movies</button>
         </span>
 
     </mat-toolbar-row>
