--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,6 +8,6 @@
         <mat-form-field>
             <input type="password" matInput placeholder="passcode">
         </mat-form-field>
-        <button mat-button mat-raised-button color="primary" (click)="userLogin()">Primary</button>
+        <button mat-button mat-raised-button color="primary" (click)="userLogin()">Login</button>
     </form>
 </mat-card>
