--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -7,7 +7,7 @@
             </mat-form-field>
 
             <mat-form-field>
-                <input matInput placeholder="Password" id="password" [(ngModel)]="user.password" name="password">
+                <input type="password" matInput placeholder="Password" id="password" [(ngModel)]="user.password" name="password">
             </mat-form-field>
 
             <mat-form-field>
@@ -31,9 +31,9 @@
             </mat-form-field>
 
             <mat-form-field>
-                <input matInput #postalcode maxlength="5" placeholder="Postal Code" id="postalcode" [(ngModel)]="user.postalcode" name="postalcode">
+                <input matInput #postalcode maxlength="6" placeholder="Postal Code" id="postalcode" [(ngModel)]="user.postalcode" name="postalcode">
                 <mat-hint align="end">
-                    {{postalcode.value.length}} / 5
+                    {{postalcode.value.length}} / 6
                 </mat-hint>
             </mat-form-field>
             <div>
