--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,6 +6,8 @@
             <button routerLink="/register" mat-button>Register</button>
              <button routerLink="/login" mat-button>Login</button>
               <button routerLink="/movies" mat-button>Movies</button>
+              <button routerLink="/dashboard" mat-button>Dashboard</button>
+
         </span>
 
     </mat-toolbar-row>
