--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,10 +2,11 @@
     <mat-toolbar-row>
         <span>{{title}}</span>
         <span>
-<button routerLink="/home" routerLinkActive="active" mat-button>Home</button>
+            <button routerLink="/home" routerLinkActive="active" mat-button>Home</button>
             <button routerLink="/register" mat-button>Register</button>
-             <button routerLink="/login" mat-button>Login</button>
-              <button routerLink="/movies" mat-button>Movies</button>
+            <!-- <button routerLink="/login" mat-button>Login</button> -->
+            <button routerLink="/movies" mat-button>Movies</button>
+            <button routerLink="/dashboard" mat-button>Dashboard</button>
         </span>
 
     </mat-toolbar-row>
