authentication status condition added

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -36,5 +36,10 @@
 
         </mat-tab>
         <mat-tab label="Bus Ticktes">Comming Soon</mat-tab>
+
+        <div *ngFor="let name of users">
+
+
+        </div>
     </mat-tab-group>
 </mat-card>
