--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -28,7 +28,10 @@
                     </div>
 
 
+                    <div *ngFor="let user of users">
+                        {{user.userName}}
 
+                    </div>
                 </div>
             </form>
 
