--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,14 +7,11 @@
             <button routerLink="/login" mat-button>Login</button>
             <button routerLink="/movies" mat-button >Movies</button>
             <button routerLink="/dashboard" mat-button>Dashboard</button>
-            <button mat-button [matMenuTriggerFor]="menu" ><i class="material-icons">account_circle</i>&nbsp;Blacky Geeky</button>
+            <button mat-button [matMenuTriggerFor]="menu" ><i class="material-icons">account_circle</i>&nbsp;User</button>
              <mat-menu #menu="matMenu">
-             <button mat-menu-item>My bookings</button>
-             <button mat-menu-item (click)="userLogout()">Logout</button>
-
-            {{isAuthenticatedStatus()}}
-
-           </mat-menu>
+                <button mat-menu-item>My bookings</button>
+                <button mat-menu-item (click)="userLogout()">Logout</button>
+             </mat-menu>
         </span>
 
     </mat-toolbar-row>
