bus component added and request nmp installed

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,7 @@
             <button routerLink="/home" routerLinkActive="active" mat-button>Home</button>
             <button routerLink="/register" mat-button  >Register</button>
             <button routerLink="/login" mat-button>Login</button>
-            <button routerLink="/movies" mat-button >Movies</button>
+            <button routerLink="/bus" mat-button >Bus</button>
             <button routerLink="/dashboard" mat-button>Dashboard</button>
             <button mat-button [matMenuTriggerFor]="menu" ><i class="material-icons">account_circle</i>&nbsp;User</button>
              <mat-menu #menu="matMenu">
