--- a/src/app/bus/bus.component.html
+++ b/src/app/bus/bus.component.html
@@ -1,9 +1,16 @@
-<mat-card fxLayout="column" fxLayoutAlign="center start">
+<mat-card>
 
 
-    <mat-card-title>Book your bus tickets</mat-card-title>
+    <mat-card-title fxLayout="row" fxLayoutAlign="start center">Book your bus tickets</mat-card-title>
 
-    <div fxLayout="row" fxLayoutGap="15px">
+    <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="15px">
+        <mat-radio-group [(ngModel)]="trip.type">
+            <mat-radio-button value="oneWayTrip">One Way</mat-radio-button>
+            <mat-radio-button value="roundTrip">Round Trip</mat-radio-button>
+        </mat-radio-group>
+    </div>
+
+    <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="15px">
         <mat-form-field fxLayoutMargin>
             <input matInput placeholder="From">
         </mat-form-field>
@@ -12,12 +19,18 @@
         </mat-form-field>
 
         <mat-form-field fxLayoutMargin>
-            <input matInput [matDatepicker]="picker" placeholder="Choose a date">
+            <input matInput [matDatepicker]="picker" placeholder="Depart">
             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-datepicker #picker></mat-datepicker>
         </mat-form-field>
 
-        <button mat-button mat-raised-button color="primary">Search Bus</button>
+        <mat-form-field fxLayoutMargin *ngIf="trip.type == 'roundTrip'">
+            <input matInput [matDatepicker]="picker" placeholder="Return">
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
+
+        <button mat-button mat-raised-button color="primary" (click)="searchBus()">Search Bus</button>
 
     </div>
 
