--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,10 +1,10 @@
 @import '~@angular/material/theming';
 @include mat-core();
-// $gdkn-primary: mat-palette($mat-blue-grey);
-// $gdkn-accent: mat-palette($mat-pink, 500, 900, A100);
-// $gdkn-warn: mat-palette($mat-deep-orange);
-// $gdkn-theme: mat-light-theme($gdkn-primary, $gdkn-accent, $gdkn-warn);
-// @include angular-material-theme($gdkn-theme);
+$gdkn-primary: mat-palette($mat-indigo);
+$gdkn-accent: mat-palette($mat-pink);
+$gdkn-warn: mat-palette($mat-deep-orange);
+$gdkn-theme: mat-light-theme($gdkn-primary, $gdkn-accent, $gdkn-warn);
+@include angular-material-theme($gdkn-theme);
 // .alternate-theme {
 //     $alternate-primary: mat-palette($mat-light-blue);
 //     $alternate-accent: mat-palette($mat-yellow, 400);
