--- a/src/app/bus/bus.component.html
+++ b/src/app/bus/bus.component.html
@@ -5,27 +5,27 @@
 
     <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="15px">
         <mat-radio-group [(ngModel)]="trip.type">
-            <mat-radio-button value="oneWayTrip">One Way</mat-radio-button>
-            <mat-radio-button value="roundTrip">Round Trip</mat-radio-button>
+            <mat-radio-button fxLayoutGap="10px" value="oneWayTrip">One Way</mat-radio-button>
+            <mat-radio-button fxLayoutGap="10px" value="roundTrip">Round Trip</mat-radio-button>
         </mat-radio-group>
     </div>
 
     <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="15px">
         <mat-form-field fxLayoutMargin>
-            <input matInput placeholder="From">
+            <input matInput placeholder="From" [(ngModel)]="trip.from">
         </mat-form-field>
         <mat-form-field fxLayoutMargin>
-            <input matInput placeholder="To">
+            <input matInput placeholder="To" [(ngModel)]="trip.to">
         </mat-form-field>
 
         <mat-form-field fxLayoutMargin>
-            <input matInput [matDatepicker]="picker" placeholder="Depart">
+            <input matInput [matDatepicker]="picker" placeholder="Depart" [(ngModel)]="trip.departDate">
             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-datepicker #picker></mat-datepicker>
         </mat-form-field>
 
         <mat-form-field fxLayoutMargin *ngIf="trip.type == 'roundTrip'">
-            <input matInput [matDatepicker]="picker" placeholder="Return">
+            <input matInput [matDatepicker]="picker" placeholder="Return" [(ngModel)]="trip.returnData">
             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-datepicker #picker></mat-datepicker>
         </mat-form-field>
@@ -33,5 +33,23 @@
         <button mat-button mat-raised-button color="primary" (click)="searchBus()">Search Bus</button>
 
     </div>
-
 </mat-card>
+
+<table matSort (matSortChange)="sortData($event)">
+    <tr>
+        <th mat-sort-header="name">Departure</th>
+        <th mat-sort-header="calories">Duration</th>
+        <th mat-sort-header="fat">Arrival</th>
+        <th mat-sort-header="carbs">Travels</th>
+        <th mat-sort-header="protein">Seats</th>
+        <!-- <th mat-sort-header="test">Price</th> -->
+    </tr>
+
+    <tr *ngFor="let data of oneWaysBusList">
+        <td>{{data.DepartureTime}}</td>
+        <td>{{data.duration}}</td>
+        <td>{{data.ArrivalTime}}</td>
+        <td>{{data.TravelsName}}</td>
+        <td>{{data.RouteSeatTypeDetail.list[0].SeatsAvailable}}</td>
+    </tr>
+</table>
