--- a/src/app/bus/bus.component.html
+++ b/src/app/bus/bus.component.html
@@ -30,6 +30,15 @@
             <mat-datepicker #picker></mat-datepicker>
         </mat-form-field>
 
+        <mat-form-field class="example-full-width">
+            <input type="text" placeholder="Pick one" aria-label="Number" matInput [formControl]="myControl" [matAutocomplete]="auto">
+            <mat-autocomplete #auto="matAutocomplete">
+                <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+                    {{ option }}
+                </mat-option>
+            </mat-autocomplete>
+        </mat-form-field>
+
         <button mat-button mat-raised-button color="primary" (click)="searchBus()">Search Bus</button>
 
     </div>
