--- a/src/app/bus/bus.component.html
+++ b/src/app/bus/bus.component.html
@@ -6,16 +6,27 @@
     <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="15px">
         <mat-radio-group [(ngModel)]="trip.type">
             <mat-radio-button fxLayoutGap="10px" value="oneWayTrip">One Way</mat-radio-button>
-            <mat-radio-button fxLayoutGap="10px" value="roundTrip">Round Trip</mat-radio-button>
+            <!-- <mat-radio-button fxLayoutGap="10px" value="roundTrip">Round Trip</mat-radio-button> -->
         </mat-radio-group>
     </div>
 
     <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="15px">
         <mat-form-field fxLayoutMargin>
-            <input matInput placeholder="From" [(ngModel)]="trip.from">
+            <input type="text" placeholder="From" aria-label="Number" matInput [formControl]="fromCityControl" [matAutocomplete]="auto" [(ngModel)]="trip.from">
+            <mat-autocomplete #auto="matAutocomplete">
+                <mat-option *ngFor="let option of fromFilteredOptions | async" [value]="option">
+                    {{ option }}
+                </mat-option>
+            </mat-autocomplete>
         </mat-form-field>
+
         <mat-form-field fxLayoutMargin>
-            <input matInput placeholder="To" [(ngModel)]="trip.to">
+            <input type="text" placeholder="To" aria-label="Number" matInput [formControl]="toCityControl" [matAutocomplete]="auto" [(ngModel)]="trip.to">
+            <mat-autocomplete #auto="matAutocomplete">
+                <mat-option *ngFor="let option of toFilteredOptions | async" [value]="option">
+                    {{ option }}
+                </mat-option>
+            </mat-autocomplete>
         </mat-form-field>
 
         <mat-form-field fxLayoutMargin>
@@ -30,14 +41,7 @@
             <mat-datepicker #picker></mat-datepicker>
         </mat-form-field>
 
-        <mat-form-field class="example-full-width">
-            <input type="text" placeholder="Pick one" aria-label="Number" matInput [formControl]="myControl" [matAutocomplete]="auto">
-            <mat-autocomplete #auto="matAutocomplete">
-                <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
-                    {{ option }}
-                </mat-option>
-            </mat-autocomplete>
-        </mat-form-field>
+
 
         <button mat-button mat-raised-button color="primary" (click)="searchBus()">Search Bus</button>
 
